fixed the streching issue of the education section by adding align-self: strech

--- a/css/wide.css
+++ b/css/wide.css
@@ -76,6 +76,7 @@ article .languages {
 article .education {
 	order: 6;
 	width: 40%;
+	align-self: stretch;
 }
 
 article > header hgroup {
